--- a/src/Main/PanelCharacterTile.form
+++ b/src/Main/PanelCharacterTile.form
@@ -115,7 +115,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="pnlTileInfo">
+    <Container class="javax.swing.JPanel" name="pnlTileShortinfo">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" id="black" palette="1" red="0" type="palette"/>
